--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 </head>
 <body>
   <header>
-    <img src="AGUIA.png" alt="ZooGames Logo">
+    <img src="AGUIA.png" alt=>
     <h1>BANCA ÁGUIA OFICIAL</h1>
   </header>
 
