--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://bancafeiticeiravip.com">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://bancafeiticeiravip.com/og-image.jpg">
-  <title>Banca Feiticeira.Vip - Melhor Banca do Brasil</title>
+  <title>Banca Aguia Oficial - Melhor Banca do Brasil</title>
   <link rel="icon" href="feiticeira.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer">
