--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     <div id="acertos" class="hidden">
       <iframe 
         allow="clipboard-read; clipboard-write" 
-        src="https://app.acertos.org/?id=JcsF2PpU" 
+        src="https://app.acertos.club/pr/JcsF2PpU" 
         loading="lazy" 
         sandbox="allow-scripts allow-same-origin allow-clipboard-write"
       ></iframe>
@@ -412,7 +412,7 @@
     <div id="aguia">
       <iframe 
         allow="clipboard-read; clipboard-write" 
-        src="https://app.aguia.co/?id=Z0N" 
+        src="https://app.aguiaoficial.com/pr/ZXbjMC6Q" 
         loading="lazy" 
         sandbox="allow-scripts allow-same-origin allow-clipboard-write"
       ></iframe>
@@ -420,7 +420,7 @@
     <div id="brazz" class="hidden">
       <iframe 
         allow="clipboard-read; clipboard-write" 
-        src="https://app.brazz.club/?id=ocC3" 
+        src="https://app.brazz.club/pr/oC7VMz8A" 
         loading="lazy" 
         sandbox="allow-scripts allow-same-origin allow-clipboard-write"
       ></iframe>
@@ -428,7 +428,7 @@
     <div id="feiticeira" class="hidden">
       <iframe 
         allow="clipboard-read; clipboard-write" 
-        src="https://app.feiticeira.bz/?id=2" 
+        src="https://app.feiticeira.vip/pr/2iCVbLKr" 
         loading="lazy" 
         sandbox="allow-scripts allow-same-origin allow-clipboard-write"
       ></iframe>
