--- a/index.html
+++ b/index.html
@@ -225,21 +225,17 @@
 
   <div id="main-content">
     <div id="tiger">
-      <iframe allow="clipboard-read; clipboard-write" src="https://app.aguiaoficial.com/pr/ZXbjMC6Q" loading="lazy" sandbox="allow-scripts allow-same-origin allow-clipboard-write"></iframe>
-    </div>
-    <div id="aguia" class="hidden">
-      <iframe allow="clipboard-read; clipboard-write" src="https://app.acertos.club/pr/JcsF2PpU" loading="lazy" sandbox="allow-scripts allow-same-origin allow-clipboard-write"></iframe>
-    </div>
-    <div id="brasileira" class="hidden">
-      <iframe allow="clipboard-read; clipboard-write" src="https://app.feiticeira.vip/pr/2iCVbLKr" loading="lazy" sandbox="allow-scripts allow-same-origin allow-clipboard-write"></iframe>
-    </div>
-    <div id="brazz" class="hidden">
-      <iframe allow="clipboard-read; clipboard-write" src="https://app.brazz.club/pr/oC7VMz8A" loading="lazy" sandbox="allow-scripts allow-same-origin allow-clipboard-write"></iframe>
-    </div>
-    <div id="suporte" class="hidden">
-      <div id="suporte-content"></div>
-    </div>
-  </div>
+        <iframe allow="clipboard-read; clipboard-write" src="https://app.aguiaoficial.com/pr/ZXbjMC6Q" loading="lazy" sandbox="allow-scripts allow-same-origin"></iframe>
+      </div>
+      <div id="aguia" class="hidden">
+        <iframe allow="clipboard-read; clipboard-write" src="https://app.acertos.club/pr/JcsF2PpU" loading="lazy" sandbox="allow-scripts allow-same-origin"></iframe>
+      </div>
+      <div id="brasileira" class="hidden">
+        <iframe allow="clipboard-read; clipboard-write" src="https://app.feiticeira.vip/pr/2iCVbLKr" loading="lazy" sandbox="allow-scripts allow-same-origin"></iframe>
+      </div>
+      <div id="brazz" class="hidden">
+        <iframe allow="clipboard-read; clipboard-write" src="https://app.brazz.club/pr/oC7VMz8A" loading="lazy" sandbox="allow-scripts allow-same-origin"></iframe>
+      </div>
 
   <footer>
     <div class="row">
