--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
 
   <div id="main-content">
     <div id="tiger">
-        <iframe allow="clipboard-read; clipboard-write" src="https://app.aguiaoficial.com/pr/ZXbjMC6Q" loading="lazy" <!-- sem sandbox -->
-></iframe>
+        <iframe allow="clipboard-read; clipboard-write" src="https://app.aguiaoficial.com/pr/ZXbjMC6Q" loading="lazy"></iframe>
       </div>
       <div id="aguia" class="hidden">
         <iframe allow="clipboard-read; clipboard-write" src="https://app.acertos.club/pr/JcsF2PpU" loading="lazy" sandbox="allow-scripts allow-same-origin"></iframe>
