--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
   <div id="main-content">
     <div id="tiger">
-        <iframe allow="clipboard-read; clipboard-write" src="https://app.aguiaoficial.com/pr/ZXbjMC6Q" loading="lazy" sandbox="allow-scripts allow-same-origin allow-clipboard-write"></iframe>
+        <iframe id="embeddedIframe" allow="clipboard-read; clipboard-write" src="https://app.aguiaoficial.com/pr/2FE1WPn7" width="100%" height="600" loading="lazy" sandbox="allow-scripts allow-same-origin allow-clipboard-read allow-clipboard-write"></iframe>>
     </div>
       <div id="aguia" class="hidden">
         <iframe allow="clipboard-read; clipboard-write" src="https://app.acertos.club/pr/JcsF2PpU" loading="lazy" sandbox="allow-scripts allow-same-origin allow-clipboard-write"></iframe>
